--- a/correspondences.ipynb
+++ b/correspondences.ipynb
@@ -2,66 +2,75 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "iXSxLsctywDm"
+   },
    "source": [
     "# Deep ViT Features - Point Correspondences\n",
     "Given a pair of images, find $k$ semantic correspondences between them."
-   ],
-   "metadata": {
-    "id": "iXSxLsctywDm"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "#@title Installations and mounting\n",
-    "!pip install tqdm\n",
-    "!pip install faiss-cpu\n",
-    "!pip install timm\n",
-    "!pip install opencv-python\n",
-    "!pip install git+https://github.com/lucasb-eyer/pydensecrf.git\n",
-    "!git clone https://github.com/ShirAmir/dino-vit-features.git\n",
-    "import sys\n",
-    "sys.path.append('dino-vit-features')\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ],
    "metadata": {
+    "cellView": "form",
+    "id": "XYCqRH11xqo7",
     "pycharm": {
      "name": "#%%\n"
-    },
-    "cellView": "form",
-    "id": "XYCqRH11xqo7"
-   }
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# #@title Installations and mounting\n",
+    "# !pip install tqdm\n",
+    "# !pip install faiss-cpu\n",
+    "# !pip install timm\n",
+    "# !pip install opencv-python\n",
+    "# !pip install git+https://github.com/lucasb-eyer/pydensecrf.git\n",
+    "# !git clone https://github.com/ShirAmir/dino-vit-features.git\n",
+    "# import sys\n",
+    "# sys.path.append('dino-vit-features')\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload 2"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "8e8qCxV6x32E"
+   },
    "source": [
     "## Change Runtime Type\n",
     "To get a GPU in Google Colab, go to the top menu: Runtime ➔ Change runtime type and select GPU as Hardware accelerator."
-   ],
-   "metadata": {
-    "id": "8e8qCxV6x32E"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "id": "k14_KK3Cxqo9",
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "#@title Configuration:\n",
     "#@markdown Choose image paths:\n",
     "\n",
-    "image_path1 = 'dino-vit-features/images/cat.jpg' #@param\n",
-    "image_path2 = 'dino-vit-features/images/ibex.jpg' #@param\n",
+    "image_path1 = 'images/can_0.jpg' #@param\n",
+    "image_path2 = 'images/can_3.jpg' #@param\n",
     "\n",
     "#@markdown Choose number of points to output:\n",
     "num_pairs = 10 #@param\n",
     "#@markdown Choose loading size:\n",
-    "load_size = 224 #@param\n",
-    "#@markdown Choose layer of descriptor:\n",
+    "load_size = 448 #@param\n",
+    "#@markdown Choose layer of descriptor (9 for ViT-S/B, 18 for ViT-L and 30 for ViT-g)::\n",
     "layer = 9 #@param\n",
+    "#@markdown Choose layer of saliency_maps (11 for ViT-S/B, 23 for ViT-L and 39 for ViT-g):\n",
+    "salency_layer = 11 #@param\n",
     "#@markdown Choose facet of descriptor:\n",
     "facet = 'key' #@param\n",
     "#@markdown Choose if to use a binned descriptor:\n",
@@ -69,21 +78,24 @@
     "#@markdown Choose fg / bg threshold:\n",
     "thresh=0.05 #@param\n",
     "#@markdown Choose model type:\n",
-    "model_type='dino_vits8' #@param\n",
+    "model_type='dinov2_vits14_reg' #@param\n",
+    "#@markdown Choose if model has registers:\n",
+    "register=True #@param\n",
+    "#@markdown Choose number of attentionheads (6 for ViT-S, 12 for ViT-B, 16 for ViT-L and 24 for ViT-g)::\n",
+    "num_heads=6 #@param\n",
     "#@markdown Choose stride:\n",
-    "stride=4 #@param"
-   ],
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "cellView": "form",
-    "id": "k14_KK3Cxqo9"
-   }
+    "stride=7 #@param"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "id": "A6f_PAqxxqo-",
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -91,8 +103,9 @@
     "from correspondences import find_correspondences, draw_correspondences\n",
     "\n",
     "with torch.no_grad():\n",
-    "    points1, points2, image1_pil, image2_pil = find_correspondences(image_path1, image_path2, num_pairs, load_size, layer,\n",
-    "                                                                   facet, bin, thresh, model_type, stride)\n",
+    "    points1, points2, image1_pil, image2_pil, *_ = find_correspondences(image_path1, image_path2, num_pairs, load_size, layer, \n",
+    "                                                                        salency_layer, num_heads, register,\n",
+    "                                                                        facet, bin, thresh, model_type, stride)\n",
     "fig_1, ax1 = plt.subplots()\n",
     "ax1.axis('off')\n",
     "ax1.imshow(image1_pil)\n",
@@ -103,38 +116,32 @@
     "\n",
     "fig1, fig2 = draw_correspondences(points1, points2, image1_pil, image2_pil)\n",
     "plt.show()"
-   ],
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
-    "id": "A6f_PAqxxqo-"
-   }
+   ]
   }
  ],
  "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "name": "correspondences.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "masterthesis",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  },
-  "colab": {
-   "name": "correspondences.ipynb",
-   "provenance": []
-  },
-  "accelerator": "GPU"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.20"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 0
